# bazel_iwyu

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: demo-action.yml
bazel/: dependencies.bzl  prebuilt_pkg.bzl
bazel/iwyu/: BUILD  BUILD.bazel  BUILD.prebuilt_pkg  iwyu.bzl  run_iwyu.sh
bazel/iwyu/mappings/: gtest.imp
examples/boost/: BUILD  BUILD.bazel  archive_example.cc
examples/cross_compilation/: .bazelrc  BUILD  WORKSPACE  chromium_sysroot.BUILD
examples/cross_compilation/base/: BUILD  atomic_test.cc  math_demo.cc
examples/cross_compilation/bazel/: sysroots.bzl
examples/cross_compilation/bazel/soctype/: BUILD
examples/gtest/: BUILD.bazel  sample2.cc  sample2.h  sample2_test.cc
internal/: README-docker.md  README.md  angle_quote_curse_dirty_fix.patch  build_iwyu.sh  build_iwyu_docker.sh
internal/docker/: sources.list.cn.aarch64  ubuntu2004.aarch64.dockerfile  ubuntu2204.builder.dockerfile  ubuntu2204.dockerfile  ubuntu2204.x86_64.dockerfile
internal/docker/installers/: install_cmake.sh  installer_base.sh
internal/installers/: install_llvm_release.sh
internal/patches/: p01_angle_quote_curse_dirty_fix.patch  p02_issue_1162_crash_fix.patch
