load("//bazel:rules_cc.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "sample2",
    srcs = ["sample2.cc"],
    hdrs = ["sample2.h"],
)

cc_test(
    name = "sample2_test",
    srcs = ["sample2_test.cc"],
    deps = [
        ":sample2",
        "@com_google_googletest//:gtest_main",
    ],
)
